feat : 뉴스 스케줄러 예외 처리 및 테스트 코드 작성 (#41)
* [#2] feat : 패키지 구조 생성

* [#2] feat : common schedule 추가

* [#2] feat : schedule yml 추가

* [#2] feat : schedule build 추가

* [#2] feat : schedule exception 추가

* [#2] feat : schedule 크롤링 설계

* [#2] feat : schedule 자동실행 설계

* [#2] feat : schedule 삭제 news 패키지 생성

* [#2] fix : 위치 수정

* [#2] feat : 기본 설정 설계

* [#2] feat : 필요 없는 문자 삭제 및 출판일 수정 메소드 작성

* [#2] fix : 그레이들 수정

* [#2] feat : requestDto 생성

* [#2] feat : repository 생성

* [#2] feat : 빌더 및 Enum Default 설정

* [#2] fix : entity 속성 수정

* [#2] fix : Enum 추가

* [#2] feat : DB 저장 로직 작성

* [#26] feat : issue26 자동화 생성

* [#26] feat : 배치 자동화 구현

* [#26] feat : 배치 어노테이션 위치 변경

* [#26] feat : 배치 의존성 생성

* [#26] feat : 3시간마다 크롤링 자동화 생성

* [#26] feat :배치 yml 추가

* [#26] fix : enum클래스 default 변경

* [#26] fix : 히스토리 삭제

* [#26] fix : 패치 삭제

* [#26] fix : 스케쥴러로 사용

* [#26] fix : 리뷰 수정

* [#2] fix : 리뷰 수정

* [#2] fix : 배치 삭제

* [#2] fix : entity 수정

* [#2] fix : 상수 처리, 오타 수정

* [#2] fix : repository 수정

* [#2] fix : EOL 수정

* [#2] feat : 중복 처리 기능 생성

* [#2] feat : 중복 처리 기능 생성

* [#28] fix : 배치 삭제 필요 없는 entity 삭제

* [#28] fix : 그레이들 common 모듈 추가

* [#28] fix : 임포트 수정

* [#26] fix : 임포트 수정, cron명 수정

* [#26] fix : 크론 명 수정, 상수 처리

* [#28] feat : 필요없는 entity 삭제

* [#28] feat : 잘못된 삭제 수정

* [#26] fix : dev내용 수정

* [#26] fix : yml 수정

* [#28] fix : 테스트 코드 환경 설정

* [#37] fix : repository 위치 수정

* [#37] feat : 스케줄러 생성

* [#37] feat : 알림 메소드 생성

* [#37] feat : 시간변경 entity 넣기

* [#37] feat : 어제 크롤링한 내용 가져오기

* [#37] fix : 스케줄러 정리

* [#37] fix : 알람일 수정

* [#37] fix : 잘못된 트렌젝션 수정, 잘못된 int타입 수정

* [#28] fix : 로직 변경

* [#26] feat : 삭제 로직 및 스케쥴러 생성

* [#26] fix : 스케줄러 시작/끝 알림 수정

* [#28] feat : 테스트 코드 생성

* Delete schedule/src/test/java/itcast/news/application/NewsServiceTest.java

테스트 코드 삭제

* [#26] fix : integer 수정

* [#26] fix : static 추가 및 수정

* [#26] feat : 크롤링 기능에 Ai요약 기능 추가